# surf

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.dev.yaml  compose.yaml  flake.nix  run.sh  run_backend.sh  run_frontend.sh  rustfmt.toml
backend/: Cargo.toml  Dockerfile  config.toml
backend/migrations/: 00000000_setup_users_table.sql  00000000_setup_vulnerabilities_table.sql  00000001_setup_vulnerabilities_table.sql  00000002_setup_alerts_table.sql
backend/src/: config.rs  main.rs  telemetry.rs
backend/src/domains/: alerts.rs  mod.rs  users.rs  vulnerabilities.rs
backend/src/repos/: github.rs  mod.rs  postgres.rs
backend/src/routes/: alerts.rs  mod.rs  vulnerabilities.rs
backend/src/services/: auth.rs  mod.rs  users.rs  vulnerabilities.rs
config/: nginx.conf
frontend/: .prettierrc  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx
frontend/src/components/ui/: Chart.tsx  Icon.tsx
frontend/src/hooks/: useVulnerabilities.ts  useVulnerabilities.tsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/vulnerabilities/: index.tsx  search.tsx
src/: main.rs  repos.rs
src/domains/: mod.rs  users.rs
src/repos/: postgres.rs
src/routes/: mod.rs
