[package]
name = "sebastian"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3" }
backon = "1.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "chrono", "json", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
zip = "2.6.1"

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls-native-roots"]

