[package]
name = "surf"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/HectorSchreiner/surf"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.97" }
async-trait = "0.1.88"
axum = { version = "0.8.3" }
backon = { version = "1.5.0" }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
config = { version = "0.15.11" }
futures = { version = "0.3.31" }
http = { version = "1.3.1" }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
zip = { version = "2.6.1" }

[dependencies.utoipa]
version = "5.3.1"
features = ["chrono", "url", "uuid"]
optional = true

[dependencies.utoipa-redoc]
version = "6.0.0"
optional = true

[features]
docs = ["dep:utoipa", "dep:utoipa-redoc"]
